--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "functions": {
-    "src/pages/**/*.{js,ts}": {
-      "maxDuration": 60
-    }
-  }
+  "outputDirectory": ".next"
 }
+
