--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "npm run sitemap && next build --webpack",
-    "start": "next start --webpack",
+    "dev": "next dev",
+    "build": "npm run sitemap && next build",
+    "start": "next start",
     "lint": "next lint",
     "sitemap": "node --loader ts-node/esm scripts/generate-sitemap.ts"
   },
