Fix: Remove invalid _comment from vercel.json schema

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,5 @@
   "version": 2,
   "buildCommand": "npm run build",
   "installCommand": "npm install",
-  "outputDirectory": ".next",
-  "_comment": "Force deploy 2026-02-12 - static generation fix"
+  "outputDirectory": ".next"
 }
