--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "outputDirectory": ".next"
+  "framework": "nextjs"
 }
